kube/app/foundry-vtt/foundry-vtt.yml
---
# Source: foundry-vtt/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
  labels:
    app.kubernetes.io/name: foundry-vtt
    app.kubernetes.io/version: "v9.269"
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: foundry-vtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foundry-vtt
    spec:
      serviceAccountName: default
      containers:
      - name: foundry-vtt
        image: "felddy/foundryvtt:release-9.269"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 30000
            protocol: TCP
        livenessProbe:
          initialDelaySeconds: 600
          failureThreshold: 40
          periodSeconds: 25
          httpGet:
            path: /
            port: http
        readinessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: http
        resources:
            limits:
              cpu: 1024m
              memory: 1024Mi
            requests:
              cpu: 512m
              memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: foundry-vtt-data
