kube/app/foundry-vtt/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt-lan
  namespace: foundry-vtt
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.227"
  labels:
    app.kubernetes.io/name: foundry-vtt
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: foundry-vtt
  ports:
    - port: 80
      targetPort: http
      protocol:  TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
  labels:
    app.kubernetes.io/name: foundry-vtt
    app.kubernetes.io/version: "v9.269"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol:  TCP
      name: http
  selector:
    app.kubernetes.io/name: foundry-vtt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
  labels:
    app.kubernetes.io/name: foundry-vtt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - dnd.matthew-stratton.me
    secretName: foundry-vtt-tls
  rules:
  - host: dnd.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: foundry-vtt
            port:
              number: 80
        path: /
        pathType: Prefix
